[gd_scene load_steps=7 format=3 uid="uid://bbiyb8t62nqtf"]

[ext_resource type="FontFile" uid="uid://dvawglhcp46vu" path="res://fonts/titillium-web/TitilliumWeb-SemiBold.ttf" id="1"]
[ext_resource type="Script" path="res://scripts/menus/characterselectionsubscenes/CharacterSelectBar.gd" id="2"]
[ext_resource type="Theme" uid="uid://cakbdiympnnj6" path="res://themes/angluar_panel_box.tres" id="3"]
[ext_resource type="Theme" uid="uid://xjwshynbp6sr" path="res://themes/button_theme.tres" id="4_28l3j"]
[ext_resource type="Texture2D" uid="uid://dkyyxtndooyi1" path="res://fonts/fontawesome-free-6.4.0-desktop/svgs/solid/trash.svg" id="4_i4s7r"]

[sub_resource type="FontFile" id="16"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="CharacterSelectBar" type="Panel"]
custom_minimum_size = Vector2(200, 30)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -31.0
offset_right = -45.0
offset_bottom = -1.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource("3")
script = ExtResource("2")

[node name="SelectButton" type="Button" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -13.0
flat = true

[node name="CharacterSelectButton" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = SubResource("16")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 5.0
offset_right = 25.0
offset_bottom = 20.0
grow_horizontal = 0
theme = ExtResource("4_28l3j")
icon = ExtResource("4_i4s7r")
icon_alignment = 1
expand_icon = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="DeleteButton"]
size = Vector2i(381, 105)
dialog_text = "Are you sure you want to delete this character?
This cannot be undone."

[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="confirmed" from="DeleteButton/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
